<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HarryPhoto</string>
    <string name="btnBack">返回</string>
    <string name="btnDone">完成</string>
    <string name="btnWeibo">使用新浪微博账号登录</string>
    <string name="btnQq">使用腾讯微博账号登录</string>
    <string name="btnRenren">使用人人网账号登录</string>
    <string name="btnRefresh">更新</string>
    <string name="btnHome">首页</string>
    <string name="btnSelected">精选</string>
    <string name="btnWrite">发表</string>
    <string name="btnMessage">消息</string>
    <string name="btnAccount">账户</string>
    <string name="btnPost">发表</string>
    <string name="btnImage">图片</string>
    <string name="btnRecord">录音</string>
    <string name="btnLocation">位置</string>
    <string name="btnMagic">魔法</string>
    <string name="btnGift">礼物</string>
    <string name="btnRandom">随便</string>
    
<!-- copied from Harry Camera -->
    
    <!-- Emulated action bar -->
    <string name="contentDescription_action_bar_icon">action bar icon</string>

    <!-- Bottom bar -->
    <string name="contentDescription_bottom_bar_buttom">bottom bar buttom</string>

    <!-- Welcome -->
    <string name="cd_splash">Splash</string>
    <string name="welcome_main_title">Harry Camera</string>
    <string name="title_my_photos">My Photo</string>
    <string name="title_popular">Popular</string>
    <string name="title_options">Options</string>
    <string name="contentDescription_my_photos">my photo</string>
    <string name="contentDescription_popular">popular</string>
    <string name="option_content_share">Share setting</string>
    <string name="option_content_update">Source update</string>
    <string name="option_content_about">About</string>
    <string name="option_mark_update">(new)</string>

    <!-- Camera -->
    <string name="camera">Camera</string>
    <!-- ShowRoom -->
    <string name="show_room">Show Room</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="btn_header1">Sort</string>
    <string name="btn_header2">Price</string>
    <string name="btn_header3">Color</string>
    <string name="btn_footer">Try on</string>
    <string name="footer">Choose what you like</string>

    <!-- FittingRoom-->
    <string name="fitting_room">Fitting</string>
    <string name="capture">Capture</string>
    <string name="recapture">Recapture</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="share">Share</string>
    <string name="contentDescription_fitting_image_view">fitting</string>
    <string name="contentDescription_ring_image_view">ring</string>
    <string name="toast_camera_error">Camera hasn\'t been ready or it is busy now!</string>

    <!-- Ring Grid Item -->
    <string name="contentDescription_thumb_image_view">thumb</string>
    <string name="contentDescription_check_image_view">check</string>
    <string name="content_item_price">￥ %1$s</string>

    <!-- Guide -->
    <string name="guide_take_pic">Please shoot your hand</string>
    <string name="guide_pic_taked">You can try on the rings now, or recapture</string>
    <string name="guide_pic_saved">Your show has been saved, view ,share and enjoy it.</string>

    <string name="share_via">Share via</string>
    <string name="share_subject">"Share"</string>
    <string name="share_text">"I would like to share the pretty ring with you."</string>

    <string name="no_camera">Sorry, your device has no camera, can\'t run this app!</string>
    <!-- Camera Activity -->
    <string name="category_title">Select a category</string>
    
    <string name="umeng_example_home_btn_analytics">Analytics</string>
    <string name="umeng_example_home_btn_xp">XP</string>
    <string name="umeng_example_home_btn_ad">Ads</string>
    <string name="umeng_example_home_btn_tools">Tools</string>
    <string name="umeng_example_home_btn_fb">Feedback</string>
    <string name="umeng_example_home_btn_update">Update</string>
    <string name="umeng_example_home_btn_plus">Socialize</string>
    <string name="umeng_example_home_btn_xp_ufp">Umeng For Publisher</string>
    <string name="umeng_example_xp_home_btn_container">Container</string>
    <string name="umeng_example_xp_home_btn_banner">Banner</string>
    <string name="umeng_example_xp_home_btn_banner_ufp">"Banner\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_handler">Handler</string>
    <string name="umeng_example_xp_home_btn_handler_ufp">"Handler\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_tab">Multi-Pages</string>
    <string name="umeng_example_xp_home_btn_wap">WebView</string>
    <string name="umeng_example_xp_home_btn_custom">Custom</string>
    <string name="umeng_example_xp_home_btn_wap_ufp">"WebView\n(UFP)"</string>
    <string name="umeng_example_xp_home_btn_push_header">Push AD\n(UFP)</string>
    <string name="umeng_example_xp_home_btn_textlink">Text Link</string>
    <string name="umeng_example_xp_home_btn_container_header">LargeImage</string>
    <string name="umeng_example_xp_home_handler_icons">Icons \n(UFP)</string>
    <string name="umeng_example_fb_home_btn_simple">Simple Demo</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="umeng_example_home_hint_wait">Coming soooooon</string>
    <string name="intro"> The webview before show js call Umeng Analytics APIs</string>
</resources>