<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRefresh" />
                
    </LinearLayout>

    <android.webkit.WebView
        android:id="@+id/home_webview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnHome" />

        <Button
            android:id="@+id/btnSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSelected" />

        <Button
            android:id="@+id/btnWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnWrite" />

        <Button
            android:id="@+id/btnMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMessage" />

        <Button
            android:id="@+id/btnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAccount" />

    </LinearLayout>



</RelativeLayout>