<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".ShowRoom" >

    <!-- <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/emulated_status_bar_height"
        android:background="@color/backgroud_emulated_status_bar">
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher"/> 
    </RelativeLayout>-->
    <include layout="@layout/emulated_action_bar" />
    <LinearLayout
        android:id="@+id/header"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_header1"
            android:text="@string/btn_header1"
            android:layout_weight="1"
            android:textSize="8sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_header2"
            android:text="@string/btn_header2"
            android:layout_weight="1"
            android:textSize="8sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/btn_header3"
            android:text="@string/btn_header3"
            android:layout_weight="1"
            android:textSize="8sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <GridView 
        android:id="@+id/showcase"
        android:padding="0dp"
        android:scrollbars="none"
        android:background="@color/backgroud_show_case"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:numColumns="@integer/showcase_numColumns" />

    <RelativeLayout
        android:id="@+id/footer"
        android:padding="0dp"
        android:background="@color/backgroud_footer"
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="50dp" >
        <ImageView
            android:layout_height="3dp"
            android:layout_width="match_parent"
            android:padding="0dp"
            android:layout_margin="0dp"
            android:background="@color/backgroud_footer_line"
            />
        <Button
            android:id="@+id/btn_footer"
            android:background="@drawable/show_room_footer_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/btn_footer"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="0dp"
            android:paddingBottom="3dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true" />
        <TextView
            android:id="@+id/footer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>